--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -38,7 +38,7 @@
         <div id="content">
             {% include "WebApp/topbar.html" %}
             <div class="container-fluid">
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                     <!-- Line Chart -->
                     <div class="col-xl-6 col-lg-6">
                         <label class="form-label" for="customFile">Upload a json file with polygon geometry</label>
@@ -75,6 +75,21 @@
                         </div>
                     </div>
                 </div>
+                  <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <div class="card shadow mb-4">
+                                    <div class="card-header py-3">
+                                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="text-left text-dark alert alert-info">
+                                            <strong>templates/WebApp/chart_from_ClimateSERV.html</strong> contains the HTML code to modify
+                                            the text and graphics in this page.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
             </div>
         </div>
     </div>
