--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -36,7 +36,7 @@
             <div id="content">
                 {% include "WebApp/topbar.html" %}
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row d-flex justify-content-center mt-5">
                         <!-- Area Chart -->
                         <div class="col-xl-6 col-lg-6">
                             <div class="card shadow mb-4">
@@ -70,6 +70,21 @@
                             </div>
                         </div>
                     </div>
+                              <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <div class="card shadow mb-4">
+                                    <div class="card-header py-3">
+                                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="text-left text-dark alert alert-info">
+                                            <strong>templates/WebApp/chart_from_SQLite.html</strong> contains the HTML code to modify
+                                            the text and graphics in this page.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
