--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <!-- Bootstrap-->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -33,6 +34,7 @@
     <link href="{% static '/css/L.Control.Opacity.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+    <script src="{% static 'js/leaflet-providers.js' %}"></script>
     <!-- Custom styles-->
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
 </head>
@@ -60,50 +62,65 @@
 
                                 <div id="map"></div>
                                 {#                                    <button id="settings"><i class="fa fa-cog" aria-hidden="true"></i></button>#}
+                                <!-- Tabs navs -->
+                                <div id="layer_manager">
+                                    <div class="container mt-3">
+                                        <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab" role="tablist">
+                                            <li class="nav-item" role="presentation">
+                                                <button class="active nav-link" id="home-tab" data-bs-toggle="tab"
+                                                        data-bs-target="#home" type="button" role="tab"
+                                                        aria-controls="home" aria-selected="true">Layers
+                                                </button>
+                                            </li>
+                                            <li class="nav-item" role="presentation">
+                                                <button class="nav-link" id="profile-tab" data-bs-toggle="tab"
+                                                        data-bs-target="#basemaps" type="button" role="tab"
+                                                        aria-controls="profile" aria-selected="false"></i> Basemaps
+                                                </button>
+                                            </li>
+                                            <li class="nav-item" role="presentation">
+                                                <button class="nav-link" id="messages-tab" data-bs-toggle="tab"
+                                                        data-bs-target="#messages" type="button" role="tab"
+                                                        aria-controls="messages" aria-selected="false"></i> Legends
+                                                </button>
+                                            </li>
 
-                                <div id="layer_manager" class="border border-dark rounded p-2">
-                                    <ul class="nav nav-tabs" id="myTab" role="tablist">
-                                        <li class="nav-item">
-                                            <a class="nav-link active" id="home-tab" data-toggle="tab"
-                                               href="#layers_tab" role="tab" aria-controls="home" aria-selected="true">Layers</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#basemaps_tab"
-                                               role="tab" aria-controls="profile" aria-selected="false">Basemaps</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" id="contact-tab" data-toggle="tab" href="#legends_tab"
-                                               role="tab" aria-controls="contact" aria-selected="false">Legends</a>
-                                        </li>
-                                    </ul>
-                                    <div class="tab-content" id="myTabContent">
-                                        <div class="tab-pane fade show active pt-5" id="layers_tab" role="tabpanel"
-                                             aria-labelledby="layers-tab">
-                                            <p>CHIRPS Layer
-                                                <input id="chirps" type="checkbox"/>
+                                        </ul>
+                                        <div class="border-grey bg-white p-3 tab-content">
+                                            <div class="tab-pane active" id="home" role="tabpanel"
+                                                 aria-labelledby="home-tab"><p><input class="form-check-input"
+                                                                                      id="chirps" type="checkbox"/>
+                                                <label class="form-check-label" for="chirps">CHIRPS Layer</label>
+
                                             </p>
 
-                                            <div id="opacitySlider_chirps">
-                                                <label>Opacity for CHIRPS:</label>
                                                 <input id="opacity_chirps" type="range" value="contrast" max="0.5"
                                                        min="0" step="0.1"/>
-                                            </div>
-                                            <p>ESI Layer
-                                                <input id="esi" type="checkbox"/>
-                                            </p>
+                                                <a role="button" href=#" data-bs-toggle="popover" title="CHIRPS"
+                                                   data-bs-trigger="hover focus" data-bs-content="Info about chirps"><i
+                                                        class="fa-solid fa-circle-info ml-2"></i></a>
 
-                                            <div id="opacitySlider_esi">
-                                                <label>Opacity for ESI:</label>
+                                                <p><input class="form-check-input" id="esi" type="checkbox"/>
+                                                    <label class="form-check-label" for="esi">ESI Layer</label>
+
+                                                </p>
+
                                                 <input id="opacity_esi" type="range" value="contrast" max="0.5" min="0"
                                                        step="0.1"/>
+                                                <a role="button" href=#" data-bs-toggle="popover"
+                                                   data-bs-trigger="hover focus" title="ESI"
+                                                   data-bs-content="Info about esi"><i
+                                                        class="fa-solid fa-circle-info ml-2"></i></a>
+
                                             </div>
+                                            <div class="tab-pane" id="basemaps" role="tabpanel"
+                                                 aria-labelledby="profile-tab"><p></p></div>
+                                            <div class="tab-pane" id="messages" role="tabpanel"
+                                                 aria-labelledby="messages-tab"></div>
                                         </div>
-                                        <div class="tab-pane fade" id="basemaps_tab" role="tabpanel"
-                                             aria-labelledby="basemaps-tab"></div>
-                                        <div class="tab-pane fade" id="legends_tab" role="tabpanel"
-                                             aria-labelledby="legends-tab"></div>
                                     </div>
                                 </div>
+
                                 <script src="{% static 'js/map_fixedsize.js' %}"></script>
                             </div>
                         </div>
@@ -147,7 +164,8 @@
                                             to modify
                                             the text and graphics in this page.
                                         </li>
-                                        <li><strong>staticfiles/js/map1.js</strong> controls the behavior of the map.
+                                        <li><strong>staticfiles/js/map_fixedsize.js</strong> controls the behavior of
+                                            the map.
                                         </li>
                                     </ul>
                                 </div>
