--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -13,10 +13,13 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <!-- Bootstrap-->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Leaflet-->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
           integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
@@ -24,30 +27,60 @@
     <script src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js"
             integrity="sha512-E0DKVahIg0p1UHR2Kf9NX7x7TUewJb30mxkxEm2qOYTVJObgsAGpEol9F6iK6oefCbkJiA4/i6fnTHzM6H1kEA=="
             crossorigin=""></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
     <script src="{% static '/js/L.Control.Opacity.js' %}"></script>
-    <script src="{% static '/js/home.js' %}"></script>
     <link href="{% static '/css/L.Control.Opacity.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+    <script src="{% static 'js/leaflet-providers.js' %}"></script>
     <!-- Custom styles-->
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
 </head>
-
 <body id="page-top">
+<div id="wrapper">
+    {#        {% include "WebApp/sidebar.html" %}#}
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+        <!-- Main Content -->
+        <div id="content">
+            {% include "WebApp/topbar.html" %}
+            <div class="container-fluid">
 
-    <div id="wrapper">
+                                <link rel="stylesheet" href="{% static 'css/map1.css' %}">
 
-        <div id="content-wrapper" class="d-flex flex-column">
+                                <div id="map3"></div>
 
-            <!-- Main Content -->
-            <div id="content">
-                {% include "WebApp/topbar.html" %}
-                <link rel="stylesheet" href="{% static 'css/map1.css' %}">
-                <div id="map3"></div>
-                <script src="{% static 'js/map_fullscreen.js' %}"></script>
+                                <script src="{% static 'js/map_fullscreen.js' %}"></script>
+
+
+                <div class="row">
+                    <div class="col-lg-12 mb-4">
+                        <div class="card shadow mb-4">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="text-left text-dark alert alert-info">
+                                    <ul>
+                                        <li><strong>templates/WebApp/map_fullscreen.html</strong> contains the HTML code
+                                            to modify
+                                            the text and graphics in this page.
+                                        </li>
+                                        <li><strong>staticfiles/js/map_fullscreen.js</strong> controls the behavior of
+                                            the map.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-
+</div>
 </body>
 </html>
