--- a/templates/WebApp/topbar.html
+++ b/templates/WebApp/topbar.html
@@ -60,7 +60,7 @@
                               <!-- Nav Item - User Information -->
             {% if user.is_authenticated %}
                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">{{ user.username }} </a>
-                    <ul class="dropdown-menu" id="details">
+                    <ul class="dropdown-menu" id="details" style="margin-top: 3vh">
                         <li><a class="dropdown-item"  href="/accounts/logout/">Log Out</a></li>
                     </ul>
             {% else %}
