--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -86,7 +86,7 @@
                                                        min="0" step="0.1"/>
                                                 <a role="button" href=#" data-bs-toggle="popover" title="Image Collection"
                                                    data-bs-trigger="hover focus" data-bs-content="Info about GEE Collection"><i
-                                                        class="fa-solid fa-circle-info ml-2"></i></a>
+                                                        class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
 
                                                 <p><input class="form-check-input" id="asset" type="checkbox"/>
                                                     <label class="form-check-label" for="asset">User Asset Layer</label>
@@ -98,7 +98,7 @@
                                                 <a role="button" href=#" data-bs-toggle="popover"
                                                    data-bs-trigger="hover focus" title="Asset"
                                                    data-bs-content="Info about user asset"><i
-                                                        class="fa-solid fa-circle-info ml-2"></i></a>
+                                                        class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
 
                                             </div>
                                             <div class="tab-pane" id="basemaps_gee" role="tabpanel"
