--- a/templates/WebApp/topbar.html
+++ b/templates/WebApp/topbar.html
@@ -44,7 +44,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
- <ul class="navbar-nav float-right" style="margin-left: 75%">
+ <ul class="navbar-nav float-right" style="margin-left: 55%;">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
                 </li>
