--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -40,6 +40,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-12 col-lg-6">
+                            <br>
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
@@ -79,26 +80,32 @@
                                                  aria-labelledby="layers-tab"><p><input class="form-check-input"
                                                                                       id="collection" type="checkbox"/>
                                                 <label class="form-check-label" for="collection">Image Collection Layer</label>
+                                                
+                                                <a role="button" href=#" data-bs-toggle="popover" title="Image Collection Info"
+                                                   data-bs-trigger="hover focus" 
+                                                   data-bs-content="Use this space to offer a description of the dataset.
+                                                   For this template we are using a standard GEE image collection. 
+                                                   This is defined in the file filename.ext">
+                                                   <i class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
 
                                             </p>
 
                                                 <input id="opacity_collection" type="range" value="contrast" max="0.5"
                                                        min="0" step="0.1"/>
-                                                <a role="button" href=#" data-bs-toggle="popover" title="Image Collection"
-                                                   data-bs-trigger="hover focus" data-bs-content="Info about GEE Collection"><i
-                                                        class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
 
                                                 <p><input class="form-check-input" id="asset" type="checkbox"/>
                                                     <label class="form-check-label" for="asset">User Asset Layer</label>
-
+                                                    <a role="button" href=#" data-bs-toggle="popover"
+                                                   data-bs-trigger="hover focus" title="User Asset Info"
+                                                   data-bs-content="Use this space to offer a description of the dataset.
+                                                   For this template we are using a GEE User Asset that is exposed publicly.
+                                                   This is defined in the file filename.ext">
+                                                   <i class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
                                                 </p>
 
                                                 <input id="opacity_asset" type="range" value="contrast" max="0.5" min="0"
                                                        step="0.1"/>
-                                                <a role="button" href=#" data-bs-toggle="popover"
-                                                   data-bs-trigger="hover focus" title="Asset"
-                                                   data-bs-content="Info about user asset"><i
-                                                        class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
+                                                
 
                                             </div>
                                             <div class="tab-pane" id="basemaps_gee" role="tabpanel"
